Fix docs that say builds aren't isolated

--- a/templates/help/deployment.twig
+++ b/templates/help/deployment.twig
@@ -47,7 +47,7 @@
         All commands are executed from the directory of the application.
     </p>
     <p>
-       Build command are executed from a semi-isolated environment on the build server. Push commands are executed on the server the application code is being pushed to.
+       Build command are executed from isolated docker containers on the build server. Push commands are executed on the server the application code is being pushed to.
        HAL 9000 will consider any command with a non-zero exit code as a failure.
     </p>
 
