Remove notice about future docker support

--- a/templates/help/deployment.twig
+++ b/templates/help/deployment.twig
@@ -217,7 +217,7 @@ date: ''       # ISO 8601 date
         <tbody>
             <tr>
                 <td>system</td>
-                <td>Build system. <strong>unix</strong> or <strong>windows</strong>. In the future, Docker containers may be specified.</td>
+                <td>Build system. <strong>docker:$IMAGE_NAME</strong> or <strong>windows</strong>.</td>
             </tr>
             <tr>
                 <td>dist</td>
