Allow builds or pushes to be filtered by environment in addition to ref
Fix #170

--- a/templates/push/pushes.twig
+++ b/templates/push/pushes.twig
@@ -26,7 +26,7 @@
             name="search"
             autocomplete="off"
             value="{{ search_filter }}"
-            placeholder="Valid search queries: Branch name, commit SHA, pull/#, tag/#">
+            placeholder="Examples: Branch name, commit SHA, pull/#, tag/# or env:$ENV_NAME">
 
         <input class="btn" type="submit" value="Filter">
 
