Clean up dashboard text a bit

--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -78,14 +78,18 @@
         <h5>I deploy code to other, less capable machines.</h5>
 
         <p>
-            This is the latest version of the HAL 9000 code deployment system for Quicken Loans applications.
-           <br><br>
+            This is the latest version of the HAL 9000 deployment system for Quicken Loans applications.
             The 9000 series is the most reliable computer ever made. No 9000 computer has ever made a mistake or distorted information. We are all, by any practical definition of the words, foolproof and incapable of error.
-           <br><br>
-            Applications are organized in <strong>groups</strong>. To deploy an application, find the application under the applications menu option.
-
+        </p>
+        <p>
+            <b>To deploy an application:</b> Find the application under the applications menu option.
+        </p>
+        <p>
+            <b>To add an application:</b> Add the application from the applications page. You should probably read <a href="{{ urlFor('help') }}">support page</a> for additional instructions and supported systems and project types.
+            We wouldn't want you doing something foolish, after all.
+        </p>
+        <p>
             If you you do not have the correct permissions or need support to remedy a mistake you have made, please check the <a href="{{ urlFor('help') }}">support page</a> for assistance.
-            This page also has instructions on how to add an application so I can deploy it.
         </p>
 
         <p>I look forward to working with you.</p>
