Add ability to favorite apps
Fix #179

--- a/sass/app/_global.scss
+++ b/sass/app/_global.scss
@@ -9,7 +9,7 @@
 
     @include breakpoint(32em) {
         padding: ms(3);
-        border-radius: 5px;
+        @include border-radius(5px);
 
     }
 
