--- a/sass/app/_dash-box.scss
+++ b/sass/app/_dash-box.scss
@@ -18,24 +18,51 @@
 }
 
 .flex-box {
-    @include border-radius(5px);
     @include leader();
-    @include margin-x(0);
+    @include margin-x(1em);
 
     @include padding-x(msem(5));
-    padding-top: msem(1);
-    padding-bottom: msem(1);
+    @include padding-y(msem(1));
 
     background-color: #fff;
     flex: 1;
 
     @include breakpoint(40em) {
-        &:nth-child(odd) {
-            margin-right: 1em;
-        }
+        &:first-child { margin-left: 0; }
+        &:last-child { margin-right: 0; }
+    }
+}
 
-        &:nth-child(even) {
-            margin-left: 1em;
-        }
+.box-roundy {
+    @include border-radius(5px);
+}
+
+.fav-box-wrapper {
+    @include breakpoint(40em) {
+       display: flex;
+       flex-wrap: wrap;
+    }
+}
+
+.fav-box {
+    flex: 1;
+    margin: 0;
+
+    @include breakpoint(40em) {
+        min-width: 28%;
+        max-width: 28%;
+    }
+
+    @include leader();
+    @include margin-x(1em);
+
+     h5 {
+        font-weight: bold;
+        line-height: 120%;
+        margin: .25em 0;
+        overflow: hidden;
+
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 }
