--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -87,7 +87,7 @@
 
     <p>For general questions or critical errors, you can contact Web Core through the following methods:</p>
     <ul class="list--bullet">
-        <li><strong>[Application] HAL 9000</strong> (Hipchat)</li>
+        <li><strong><a href="hipchat://www.hipchat.com/room/1036795">[Team] Web Core</strong></a> (Hipchat)</li>
         <li>{{ wcContact|raw }} (email)</li>
     </ul>
 {% endblock %}
