--- a/templates/admin/credentials/credential.add.twig
+++ b/templates/admin/credentials/credential.add.twig
@@ -13,7 +13,7 @@
             <ul class="form-fields">
                 <li>
                     <label>Type</label>
-                    <ul class="radio-grid--form">
+                    <ul class="radio-grid radio-grid--two">
 
                         {% set checked = form.type == 'aws' ? ' checked' : '' %}
                         <li>
