--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -24,7 +24,7 @@
 
                 <li>
                     <p>Group</p>
-                    <ul class="radio-grid--form">
+                    <ul class="radio-grid radio-grid--tri">
                     {% for group in groups %}
                         {% set checked = '' %}
                         {% if form.group == group.id %}
