--- a/templates/kraken/application/schema/schema.add.twig
+++ b/templates/kraken/application/schema/schema.add.twig
@@ -27,7 +27,7 @@
 
                 <li>
                     <label>Type</label>
-                    <ul class="radio-grid--form">
+                    <ul class="radio-grid radio-grid--tri">
                         {% for type, name in property_types %}
                             {% set isSelected = (type == form.type) %}
                             <li>
