--- a/templates/application/application.add.twig
+++ b/templates/application/application.add.twig
@@ -31,7 +31,7 @@
                 </li>
                 <li>
                     <label>Group</label>
-                    <ul class="radio-grid--form">
+                    <ul class="radio-grid radio-grid--tri">
                         {% for group in groups %}
                             {% set checked = '' %}
                             {% if form.group == group.id %}
