--- a/templates/application/encrypted/add.encrypted.property.twig
+++ b/templates/application/encrypted/add.encrypted.property.twig
@@ -31,7 +31,7 @@
 
                 <li>
                     <label>Environment</label>
-                    <ul class="radio-grid--form">
+                    <ul class="radio-grid radio-grid--tri">
                         {% for environment in environments %}
                             {% set checked = '' %}
                             {% if form.environment == environment.id %}
