--- a/templates/server/server.edit.twig
+++ b/templates/server/server.edit.twig
@@ -13,7 +13,7 @@
             <ul class="form-fields">
                 <li>
                     <label for="servertype">Type</label>
-                    <ul class="radio-grid--form">
+                    <ul class="radio-grid radio-grid--tri">
 
                         {% set checked = form.server_type == 'rsync' ? ' checked' : '' %}
                         <li>
@@ -48,18 +48,18 @@
                 </li>
                 <li>
                     <label>Environment</label>
-                    <ul class="radio-grid--form">
-                    {% for environment in environments %}
-                        {% set checked = '' %}
-                        {% if form.environment == environment.id %}
-                            {% set checked = ' checked="checked"' %}
-                        {% endif %}
+                    <ul class="radio-grid radio-grid--tri">
+                        {% for environment in environments %}
+                            {% set checked = '' %}
+                            {% if form.environment == environment.id %}
+                                {% set checked = ' checked="checked"' %}
+                            {% endif %}
 
-                        <li>
-                            <input type="radio" name="environment" id="environment-{{ environment.id }}" value="{{ environment.id }}"{{ checked }}>
-                            <label for="environment-{{ environment.id }}">{{ environment.name }}</label>
-                        </li>
-                    {% endfor %}
+                            <li>
+                                <input type="radio" name="environment" id="environment-{{ environment.id }}" value="{{ environment.id }}"{{ checked }}>
+                                <label for="environment-{{ environment.id }}">{{ environment.name }}</label>
+                            </li>
+                        {% endfor %}
                     </ul>
                 </li>
 
