--- a/sass/app/_js.scss
+++ b/sass/app/_js.scss
@@ -9,21 +9,30 @@
     display: none;
 }
 
-.js-search-drop {
-    position: absolute;
-    background-color: #fff;
-    border: 1px solid $blue;
-    z-index: 100;
-    display: none;
-    overflow: auto;
-    max-height: 300px;
+.js-search-container {
+    position: relative;
 }
 
-.js-search-item.js-search-item-display {
-    display: block;
-}
-.js-search-item.js-search-item-hidden {
+.js-search-drop {
+    background-color: #fff;
+    border: 1px solid $blue;
+
     display: none;
+    overflow: auto;
+    position: absolute;
+    z-index: 100;
+
+    max-height: 300px;
+    width: 100%;
+}
+
+.js-search-item {
+        &.js-search-item-display {
+            display: block;
+    }
+    &.js-search-item-hidden {
+        display: none;
+    }
 }
 
 .js-search-results {
