Fix Hello, XXX for typed.js bc changes

--- a/templates/dashboard.twig
+++ b/templates/dashboard.twig
@@ -10,11 +10,11 @@
         <h1>Dashboard</h1>
     {% else %}
         <h1>
-            <span
+            Hello<span
                 data-initial=", {{ getUsersActualName(currentUser) }}."
                 data-freud=", {{ getUsersFreudianName() }}."
                 data-nofunzone=", {{ getUsersFirstName(currentUser) }}."
-            >Hello</span>
+            ></span>
         </h1>
     {% endif %}
 
