Use a variable for breakpoints

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -34,3 +34,8 @@ $h6-size: ms(0);
 
 // Primer CSS - tooltips
 $body-font: $sans-serif-font-stack;
+
+// Breakpoints
+$bp-large: 60em;
+$bp-medium: 40em;
+$bp-small: 32em;
