--- a/sass/patterns/_scroll-thing.scss
+++ b/sass/patterns/_scroll-thing.scss
@@ -7,7 +7,7 @@
         }
     }
 
-    @include breakpoint(40em) {
+    @include breakpoint($bp-medium) {
         dl {
             max-height: 400px;
             overflow-y: scroll;
